various improvements favorites routes
